@@ -1,4 +1,5 @@
 29.oct (ws)
+      - fix #3092: Cannot see 8th note ledger lines
       - fix #6317: ledger lines not long enough for whole notes
 28.oct (ws)
       - add tempo selection to new score wizard
